--- a/settings.cfg
+++ b/settings.cfg
@@ -3,10 +3,10 @@
 [pandas_args]
 delimiter = ";"
 
-# initial columns selected for x and y data
+# initial columns selected for x and y data use 0 for index column
 [data_defaults]
-x_initial_index = 2
-y_initial_index = 5
+x_initial_index = 1
+y_initial_index = 2
 
 # see https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.find_peaks.html
 [peak_fit_defaults]
@@ -16,15 +16,16 @@ distance = 1  # comment line to use default 1
 
 # limits for prominence and distance sliders
 [slider_limit_defaults]
-prominence_upper = 1  # comment line to use drafult value 1
-prominence_lower = 0  # comment line to use drafult value 0
+prominence_max = 1  # comment line to use drafult value 1
+prominence_min = 0  # comment line to use drafult value 0
 # distance_upper = none  # comment to use number of rows
 distance_lower = 1  # minimu value is 1
 
 # colors for radio active button
 [radio_colors]
-x_color = "red"
+x_color = [0.7, 0.0, 0.0]
 y_color = "blue"
+x_font_size = 14
 
 # paramter passed to matplotlib.pyplot.plot for scattering positve peaks
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html
@@ -50,6 +51,7 @@ zorder = 10
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.figure.html
 [figure_settings]
 figsize = [16, 9]
+facecolor=[0.4, 0.4, 0.4]
 
 # paramter passed to matplotlib.pyplot.plot for plotting csv data
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html
@@ -63,6 +65,7 @@ linewidth = "1"
 [hline_settings]
 color = "red"
 linestyle = "--"
+alpha = 0.5
 
 # parameters passed to matplotlib.pyplot.axhspan for displaying "out of range" box
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.axhspan.html
