--- a/settings.cfg
+++ b/settings.cfg
@@ -11,21 +11,24 @@ y_initial_index = 2
 # see https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.find_peaks.html
 [peak_fit_defaults]
 # height = [-0.3, 0]  # [lower limit, upper limit], comment line to use default min, max data range
-prominence = [0, 1] # [min, max], comment line to use default [0, 1]
+# prominence = [0, 1] # [min, max], comment line to use default [0, 1]
 distance = 1  # comment line to use default 1
 
 # limits for prominence and distance sliders
 [slider_limit_defaults]
-prominence_max = 1  # comment line to use drafult value 1
-prominence_min = 0  # comment line to use drafult value 0
+#prominence_max = 1  # comment line to use drafult value 1
+#prominence_min = 0  # comment line to use drafult value 0
 # distance_upper = none  # comment to use number of rows
 distance_lower = 1  # minimu value is 1
+# width_min = 0
+# width_max = none
 
 # colors for radio active button
 [radio_colors]
 x_color = [0.7, 0.0, 0.0]
-y_color = "blue"
+y_color = [0.0, 0.0, 0.7]
 x_font_size = 14
+y_font_size = 14
 
 # paramter passed to matplotlib.pyplot.plot for scattering positve peaks
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html
@@ -51,7 +54,7 @@ zorder = 10
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.figure.html
 [figure_settings]
 figsize = [16, 9]
-facecolor=[0.4, 0.4, 0.4]
+facecolor=[0.6, 0.6, 0.6]
 
 # paramter passed to matplotlib.pyplot.plot for plotting csv data
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html
