update slider locations

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,7 +1,7 @@
 # arguments passed to pd.read_csv
 # see https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html
 [pandas_args]
-delimiter = ";"
+delimiter = "None"  # delimiter or "None" for autodetection
 
 # initial columns selected for x and y data use 0 for index column
 [data_defaults]
@@ -54,7 +54,7 @@ zorder = 10
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.figure.html
 [figure_settings]
 figsize = [16, 9]
-facecolor=[0.6, 0.6, 0.6]
+facecolor=[0.9, 0.9, 0.9]
 
 # paramter passed to matplotlib.pyplot.plot for plotting csv data
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html
@@ -73,5 +73,5 @@ alpha = 0.5
 # parameters passed to matplotlib.pyplot.axhspan for displaying "out of range" box
 # see https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.axhspan.html
 [axhspan_settings]
-color = "gray"
+color = [0.6, 0.4, 0.4]
 alpha = 0.2
