separated peak fitting from gui

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,7 +1,7 @@
 # arguments passed to pd.read_csv
 # see https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html
 [pandas_args]
-delimiter = "None"  # delimiter or "None" for autodetection
+#delimiter = ","  # comment this line for autodetection
 
 # initial columns selected for x and y data use 0 for index column
 [data_defaults]
